Merapikan kode dan menambahkan penjelasan kode setiap bagian

--- a/app/baca-materi.html
+++ b/app/baca-materi.html
@@ -20,14 +20,19 @@
     <div id="container" class="container light-mode text-montserrat">
 
         <!-- ===================== HEADER ===================== -->
-        <div id="header"></div>
+        <section id="header"></section>
         <!-- ===================== END HEADER ===================== -->
 
 
 
         <!-- ===================== CONTENT ===================== -->
-        <div id="content">
+        <section id="content">
+
+
+            <!-- ===================== BAGIAN ISI BACA MATERI ===================== -->
             <div class="content-read-material">
+
+                <!-- ===================== INFO MATERI ===================== -->
                 <div id="content-heading" class="content-heading bg-gradient-color">
                     <div class="material-info">
                         <div class="material-subject-info">
@@ -47,32 +52,42 @@
                         <div id="material-cover-image" class="material-cover-image"></div>
                     </div>
                 </div>
+                <!-- ===================== END INFO MATERI ===================== -->
 
-                <div id="material-content" class="material-content">
 
-                </div>
 
+
+                <!-- ===================== ISI MATERI ===================== -->
+                <div id="material-content" class="material-content"></div>
+                <!-- ===================== END ISI MATERI ===================== -->
+
+
+
+                <!-- ===================== NEXT & PREVIOUS MATERI ===================== -->
                 <div class="material-control">
                     <a id="previous-material"
                         href="baca-materi.html?menu=materi&matkul=struktur-data&materi=struktur-data-stack"
                         class="hidden button-accent-bg text-nodecoration">&#x21E6; Materi
                         Sebelumnya</a>
+
                     <a id="next-material"
                         href="baca-materi.html?menu=materi&matkul=struktur-data&materi=struktur-data-stack"
                         class="hidden button-accent-bg text-nodecoration">Materi
                         Selanjutnya &#x21E8;</a>
                 </div>
-
+                <!-- ===================== NEXT & PREVIOUS MATERI ===================== -->
             </div>
-        </div>
+            <!-- ===================== END BAGIAN ISI BACA MATERI ===================== -->
+
+
+        </section>
         <!-- ===================== END CONTENT ===================== -->
 
 
 
 
         <!-- ===================== FOOTER ===================== -->
-        <div id="footer">
-        </div>
+        <section id="footer"></section>
         <!-- ===================== END FOOTER ===================== -->
 
 
