--- a/app/mata-kuliah.html
+++ b/app/mata-kuliah.html
@@ -29,10 +29,13 @@
         <!-- ===================== CONTENT ===================== -->
         <section id="content">
 
-
+            <!-- ===================== HEADLINE TITLE ===================== -->
             <div class="content-headline center-element">
                 <span class="title-info title-info-light mt-4" align="center">MATA KULIAH</span>
             </div>
+            <!-- ===================== END HEADLINE TITLE ===================== -->
+
+
             <!-- ===================== LIST MATA KULIAH ===================== -->
             <div class="content-container">
 
@@ -73,9 +76,6 @@
                 </div>
             </div>
             <!-- ===================== END LIST MATA KULIAH ===================== -->
-
-
-
 
         </section>
         <!-- ===================== END CONTENT ===================== -->
