--- a/app/materi.html
+++ b/app/materi.html
@@ -28,14 +28,20 @@
 
         <!-- ===================== CONTENT ===================== -->
         <div id="content">
+
+            <!-- ===================== HEADLINE TITLE ===================== -->
             <div class="content-headline center-element">
                 <span id="subject-title" class="title-info title-info-light mt-4" align="center">DAFTAR MATERI</span>
             </div>
+            <!-- ===================== END HEADLINE TITLE ===================== -->
+
+
+
+            <!-- ===================== LIST MATERI ===================== -->
             <div class="content-container">
                 <div class="content-material corner-round bg-gradient-color">
                     <h1 align="center" class="content-material-tag-title text-light-color">Daftar Materi</h1>
                     <div id="list-materi" class="content-list-material">
-
                         <div class="card-material">
                             <div class="container-card-material">
                                 <div class="card-material-cover">
@@ -58,14 +64,13 @@
 
                             </div>
                         </div>
-
-
-
                     </div>
-
-
                 </div>
             </div>
+            <!-- ===================== END LIST MATERI ===================== -->
+
+
+
         </div>
         <!-- ===================== END CONTENT ===================== -->
 
