--- a/app/tentang-kami.html
+++ b/app/tentang-kami.html
@@ -28,6 +28,7 @@
         <!-- ===================== CONTENT ===================== -->
         <div id="content">
 
+        	<!-- ===================== HEADLINE DESKRIPSI ===================== -->
             <div class="app-description text-light-color bg-gradient-color">
                 <div class="app-title text-bold">
                     TENTANG KAMI
@@ -43,13 +44,15 @@
                     ut labore et dolore magna aliquyam erat, sed diam.
                 </div>
             </div>
+        	<!-- ===================== END HEADLINE DESKRIPSI ===================== -->
 
+
+        	<!-- ===================== PROFIL TIM ===================== -->
             <div class="profile-list">
 
                 <span class="title-info title-info-primary" align="center">TEAM KAMI</span>
 
                 <div class="profile-info profile-info-right bg-gradient-color">
-
                     <div class="profile-image">
                         <img class="corner-round" src="../assets/images/bima-profile.jpg" alt="Foto Bima">
                     </div>
@@ -69,11 +72,9 @@
                             ut labore et dolore magna aliquyam erat, sed diam.
                         </p>
                     </div>
-
                 </div>
 
                 <div class="profile-info profile-info-left bg-gradient-color">
-
                     <div class="profile-image">
                         <img class="corner-round" src="../assets/images/aziz-profile.jpg" alt="Foto Bima">
                     </div>
@@ -93,14 +94,10 @@
                             ut labore et dolore magna aliquyam erat, sed diam.
                         </p>
                     </div>
-
-
-
                 </div>
 
 
                 <div class="profile-info profile-info-right bg-gradient-color">
-
                     <div class="profile-image">
                         <img class="corner-round" src="../assets/images/raihan-profile.jpeg" alt="Foto Bima">
                     </div>
@@ -119,11 +116,9 @@
                             ut labore et dolore magna aliquyam erat, sed diam.
                         </p>
                     </div>
-
                 </div>
 
                 <div class="profile-info profile-info-left bg-gradient-color">
-
                     <div class="profile-image">
                         <img class="corner-round" src="../assets/images/thoriq-profile.jpg" alt="Foto Bima">
                     </div>
@@ -142,13 +137,10 @@
                             ut labore et dolore magna aliquyam erat, sed diam.
                         </p>
                     </div>
-
-
                 </div>
 
-
-
             </div>
+        	<!-- ===================== END PROFIL TIM ===================== -->
 
 
         </div>
