[FIX] Fix routing path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width"/>
 
     <title>Index</title>
-    <script>window.location.replace('http://https://kuliari.vercel.app/app/index.html');</script>
+    <script>window.location.replace('https://kuliari.vercel.app/app/index.html');</script>
 </head>
 
 <body>
